--- a/index.html
+++ b/index.html
@@ -287,26 +287,28 @@
       <h2 class="marker marker-center">Contact Me</h2>
     </div>
     <div class="row">
+
       <div class="col-md-6" data-aos="zoom-in" data-aos-delay="100">
         <div class="bg-light my-2 p-3 pt-2">
-          <form action="https://formspree.io/f/mqkndpqq"
-    method="POST">
-    <div class="form-group my-2">
-      <label for="name" class="form-label fw-bolder">Name</label>
-      <input class="form-control" type="text" id="name" name="name" required>
-    </div>
-    <div class="form-group my-2">
-      <label for="email" class="form-label fw-bolder">Email</label>
-      <input class="form-control" type="email" id="email" name="_replyto" required>
-    </div>
-  <div class="form-group my-2">
-    <label for="message" class="form-label fw-bolder">Message</label>
-    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4" required></textarea>
-  </div>
-  <button class="btn btn-primary mt-2" type="submit">Send</button>
-</form>
+          <form id="my-form" action="https://formspree.io/f/mqkndpqq" method="POST">
+              <div class="form-group my-2">
+                <label for="name" class="form-label fw-bolder">Name</label>
+                <input class="form-control" type="text" id="name" name="name" required>
+              </div>
+              <div class="form-group my-2">
+                <label for="email" class="form-label fw-bolder">Email</label>
+                <input class="form-control" type="email" id="email" name="email" required>
+              </div>
+              <div class="form-group my-2">
+                <label for="message" class="form-label fw-bolder">Message</label>
+                <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4" required></textarea>
+              </div>
+              <button id="my-form-button" class="btn btn-primary mt-2" type="submit">Send</button>
+              <p id="my-form-status"></p>
+            </form>
         </div>
       </div>
+
       <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
         <div class="mt-3 px-1">
           <div class="h5">I'd Love To Hear From You.</div>
@@ -369,5 +371,6 @@
     <script src="./scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="./scripts/aos.min.js?ver=1.2.0"></script>
     <script src="./scripts/main.js?ver=1.2.0"></script>
+
   </body>
 </html>
